# ChangeLog for dev-python/astral
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Mar 2010; James Rowe <jnrowe@gmail.com> astral-0.1.ebuild:
  Added PYTHON_DEPEND setting.

  14 Feb 2010; James Rowe <jnrowe@gmail.com> astral-0.1.ebuild:
  Incompatible with python 3.x.

  12 Dec 2009; James Rowe <jnrowe@gmail.com> astral-0.1.ebuild:
  Updated homepage.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> astral-0.1.ebuild:
  Switched to EAPI 2.

  27 Oct 2009; James Rowe <jnrowe@gmail.com> astral-0.1.ebuild:
  Keyworded x86.

  24 Oct 2009; James Rowe <jnrowe@gmail.com> astral-0.1.ebuild:
  Keyworded amd64.

  27 Sep 2009; James Rowe <jnrowe@gmail.com> astral-0.1.ebuild:
  Keyworded ~x86.

  24 Sep 2009; James Rowe <jnrowe@gmail.com> metadata.xml:
  Typo fixed.

*astral-0.1 (24 Sep 2009)

  24 Sep 2009; James Rowe <jnrowe@gmail.com> +astral-0.1.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
