@@ -2,13 +2,13 @@
 Hash: SHA1
 
 DIST astral-0.1.zip 62154 RMD160 ad2bc6c44aca70c43ef4b1e9210b9f5fa852f3f4 SHA1 70fa30e220505f204bbbcadcfd62d86417b53f43 SHA256 7ef25db58f26655495cc78c2e5db404ee39fbed455428d352ac349e78828d696
-EBUILD astral-0.1.ebuild 595 RMD160 0cc30ae7eaf5fbe2ccae329e7905aac2c7e289b6 SHA1 a8c5f5b01645609092ca8b13055bdf3e4b2b7d92 SHA256 540051e9ffe1286ab4bec5a4bcfaa745236e1cc986ae5247ba4be19c108ca76d
-MISC ChangeLog 941 RMD160 4c31b70ea09f3998e269870a064a96708bab13d3 SHA1 06e7b44c6957d027e7d83422102005060ef5b169 SHA256 9c9f6e705b572340f5cbcf23eeefdfed132e78d8f6c7d15a13e4dc8477bc5b27
+EBUILD astral-0.1.ebuild 594 RMD160 63a786b70fc71684f23ccc4a7ddc9b50a3cebb2d SHA1 a8480aaee7c799316ecef8d06ee94e435717c3bb SHA256 a11c970d379f5e2a3ed4c51d04f2d30407ec64daf2afc10fef30dd2509fe7b0f
+MISC ChangeLog 1070 RMD160 eeaa1ccc3487e78b006cbbf3ea31441d7bfe6a55 SHA1 d613f5b8e3587c83fe5453ecaa199b80f7fe4fd3 SHA256 9f22f290faea702254945ec1cc40b92a73b6d5cfedb91e9394633cd6d02a58d0
 MISC metadata.xml 706 RMD160 3a0a734d00cbfeb2018943e10b8f5eafabf8affc SHA1 9dba7069bf6cd0bae59f1cd91de0529d1d0f8d3f SHA256 0e904813139ed58daa443acaaca5928746fd1885647f69aa77ebf40a0878aefa
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkulowAACgkQzJrj3cAXR0n7gACgqglcf6VSp7M1gKOrcdOcn8+L
-QvwAn0Uclz+OFtkJKrMr5Hq8zTGFjmDo
-=yEL/
+iEYEARECAAYFAkulsyAACgkQzJrj3cAXR0nFUgCeMsr0Ts9gf3qTidkeWlKUp9ME
+5hsAoJxzMrIy/qt0lpXhBwMiH27KewbT
+=m3nm
 -----END PGP SIGNATURE-----
