@@ -2,13 +2,13 @@
 Hash: SHA1
 
 DIST rudolf-0.3.tar.gz 14788 RMD160 2c6ee3723671f7588ecca76de87f00f196e490f2 SHA1 8b7f7d1100c4992045cf51b1f292985180660bdc SHA256 b1b900b1b86bca93971925fedf50f218ab99dc69c73b374ad57aec90d65a02f2
-EBUILD rudolf-0.3.ebuild 473 RMD160 236a6d604cadb8dd589d1c281f21a001a734f73e SHA1 f3de0dd97000ea2ca2f1f81b9451ef12154b6a0d SHA256 65e7c5c7ae8f6047fed3f139c4ecdf7431fd39e6edc842e6743f5bdd1f74260c
-MISC ChangeLog 898 RMD160 48b402d9f064fb0e83e8e3be346c61e1dc5dcc44 SHA1 d8bf07956d433231b0a1460d91b135a73368f285 SHA256 e697034dd5b9bb19062967611c05bd5ed5f773744bbfde7ae8fc92237c68cd4e
+EBUILD rudolf-0.3.ebuild 477 RMD160 8a5f787560c374598f5c0e9a9e6c1c0a52fef477 SHA1 a35b407a6e9f58da9f07d668085e4cdf4a9f0397 SHA256 7d109ebde945591d272da7d668f275bed2c6cdba91b445d499fc2c5424bb4642
+MISC ChangeLog 1027 RMD160 955ef964d58c73961dd827ff2bb59f2de60f03a4 SHA1 ac8b766b2075fa6a31d4c67f2442f2f82a93f4f0 SHA256 2297599f5fa8122eb88ba284093b9c1f1344dcfb435ff3741fccb04bccb2ab53
 MISC metadata.xml 456 RMD160 75c2ac265e195c022f15c4ba9edc3677e1113bcd SHA1 514240cc2efdcc83be6053295ddb33541e937cb7 SHA256 a93a2a31a12e3ebb246c67efdea5637eba999ee5770a6e59f71cc24079bb559d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkulom4ACgkQzJrj3cAXR0m55ACdELl6kIejcYXaNv8me4Xkdqfn
-gBYAoICtkXZxcDFiBGE0SFYfpjBHL9Z+
-=yO00
+iEYEARECAAYFAkulsygACgkQzJrj3cAXR0nUYwCfaxgEyWgiGyqxV2lTkZ9VSHbK
+pPQAnjG66m5W7WPfP4PTaszOiHtznugd
+=U5jM
 -----END PGP SIGNATURE-----
