@@ -1,5 +1,5 @@
-test? ( dev-python/nose ) >=app-admin/eselect-python-20091230 dev-lang/python
-dev-python/pytz >=app-admin/eselect-python-20091230 dev-lang/python
+test? ( dev-python/pytz ) >=app-admin/eselect-python-20091230 =dev-lang/python-2* test? ( dev-python/nose )
+dev-python/pytz >=app-admin/eselect-python-20091230 =dev-lang/python-2*
 0
 http://www.sffjunkie.co.uk/files/python/astral-0.1.zip
 
@@ -8,7 +8,7 @@ MIT
 Calculations for the position of the sun
 amd64 x86
 distutils multilib python toolchain-funcs
-test
+test test
 
 
 
