@@ -1,4 +1,4 @@
-dev-python/setuptools >=app-admin/eselect-python-20091230 dev-lang/python
+dev-python/setuptools >=app-admin/eselect-python-20091230 dev-lang/python test? ( dev-python/nose )
 dev-python/nose >=app-admin/eselect-python-20091230 dev-lang/python
 0
 http://pypi.python.org/packages/source/r/rudolf/rudolf-0.3.tar.gz
@@ -8,7 +8,7 @@ ZPL
 Colour output plugin for the nose testing framework
 amd64 x86
 distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
-
+test
 
 
 
