@@ -3,6 +3,9 @@
 # $Header: $
 
   21 Mar 2010; James Rowe <jnrowe@gmail.com> astral-0.1.ebuild:
+  Use DISTUTILS_SRC_TEST instead of directly calling nosetests.
+
+  21 Mar 2010; James Rowe <jnrowe@gmail.com> astral-0.1.ebuild:
   Added PYTHON_DEPEND setting.
 
   14 Feb 2010; James Rowe <jnrowe@gmail.com> astral-0.1.ebuild:
